# srg

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  srg_conformance_v0_3.md  srg_mvp_scaffold_and_issues.md  srg_spec_v0_3.md
.claude/commands/: conformance-check.md  daily-checkin.md
.github/workflows/: ci.yml  release.yml
benchmarks/: evidence_debugging_demo.py  llm_editing_experiment.py  python_equivalent.py  token_benchmark.py
docs/: SRG_RUTHLESS_REVIEW_RUBRIC.md  srg_schema_v0_1.md
srg/: __init__.py  cli.py
srg/examples/: repo_risk.yaml  subnet_scorer.yaml  subnet_scorer_functions.py  validator_scorer.yaml
srg/kernel/: __init__.py  agentic_call.py  contracts.py  retry.py  validation.py
srg/models/: __init__.py  edge.py  evidence.py  graph.py  node.py  result.py
srg/runtime/: __init__.py  deterministic_registry.py  evidence_aggregator.py  graph_runner.py  graph_validator.py  loader.py  planner.py  saver.py
srg/schemas/: evidence.schema.json  graph.schema.json
srg/utils/: __init__.py  graph_compose.py  semantic_diff.py
tests/: test_agentic_call.py  test_cli.py  test_contracts.py  test_deterministic_registry.py  test_edge_port_validation.py  test_evidence_aggregator.py  test_evidence_summary.py  test_failure_modes.py  test_graph_compose.py  test_graph_runner.py  test_graph_validator.py  test_loader.py  test_models.py  test_planner.py  test_repo_risk_e2e.py  test_retry.py  test_saver.py  test_scope_guard.py  test_semantic_diff.py  test_subnet_scorer_e2e.py  test_token_benchmark.py  test_validation.py  test_validator_scorer_e2e.py
